--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,92 +70,18 @@ sync-github:
     - echo "Pushing to GitHub main branch from GitLab working directory"
     - cd /builds/nrp/kubevirt-terraform-provider
     - git remote add github https://x-access-token:${GITHUB_TOKEN}@github.com/nrp-nautilus/terraform-provider-kubevirt.git
-    - echo "Creating clean repository for GitHub push"
-    - mkdir clean-push
-    - cd clean-push
-    - git init
-    - git config user.email "ci@gitlab.nrp-nautilus.io"
-    - git config user.name "GitLab CI"
-    - git config init.defaultBranch main
-    - echo "Copying current source files avoiding recursion"
-    - find /builds/nrp/kubevirt-terraform-provider -maxdepth 1 -not -name clean-push -not -name .git -not -name github-repo -not -name kubevirt-terraform-provider -exec cp -r {} . \;
-    - echo "Cleaning up any git artifacts and problematic files"
-    - rm -rf .git github-repo kubevirt-terraform-provider clean-push 2>/dev/null || true
-    - rm -rf .terraform .terraform.lock.hcl 2>/dev/null || true
-    - rm -rf bin/ dist/ build/ 2>/dev/null || true
-    - echo "Removing any hidden files that might cause issues"
-    - find . -name ".*" -type f -not -name ".gitignore" -not -name ".github" -not -name ".gitlab-ci.yml" -delete 2>/dev/null || true
-    - echo "Final cleanup - removing any remaining problematic directories"
-    - rm -rf node_modules/ vendor/ .cache/ .tmp/ 2>/dev/null || true
-    - echo "Adding files to git"
-    - git add .
-    - echo "Files staged for commit:"
-    - git status --porcelain
-    - echo "Total files to be committed:"
-    - git diff --cached --name-only | wc -l
-    - echo "Committing clean repository"
-    - git commit -m "Sync from GitLab - $(date)"
-    - echo "Git status after commit"
-    - git status
-    - echo "Git branch after commit"
-    - git branch -a
-    - echo "Creating main branch from current commit"
-    - git checkout -b main
-    - echo "Git status after branch creation"
-    - git status
-    - echo "Git branch after branch creation"
-    - git branch -a
-    - echo "Pushing to GitHub"
-    - git push github main:main --force --verbose
+    - echo "Pushing current GitLab HEAD to GitHub main branch"
+    - git push github HEAD:main --force --verbose
     - echo "Git push exit code $?"
-    - echo "Git remote v output"
-    - git remote -v
-    - echo "Git status output"
-    - git status
     - echo "Phase 4 GitHub sync completed successfully"
     - echo "Validating GitHub received our code"
     - sleep 10
-    - echo "Checking GitHub API for latest commit"
-    - AUTH_HEADER="Authorization token ${GITHUB_TOKEN}"
-    - echo "Making GitHub API request"
-    - curl -s -H "$AUTH_HEADER" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/commits/main" > github_response.json
-    - echo "Checking if GitHub API response is valid"
-    - if [ ! -s github_response.json ]; then
-    -   echo "ERROR GitHub API returned empty response"
-    -   exit 1
-    - fi
-    - echo "Parsing GitHub commit hash"
-    - LATEST_COMMIT=$(jq -r '.sha' github_response.json)
-    - echo "Latest GitHub commit"
-    - echo "$LATEST_COMMIT"
-    - echo "Checking if commit hash is valid"
-    - if [ "$LATEST_COMMIT" = "null" ] || [ -z "$LATEST_COMMIT" ]; then
-    -   echo "ERROR Invalid GitHub commit hash received"
-    -   exit 1
-    - fi
-    - echo "Current GitLab commit"
-    - cd /builds/nrp/kubevirt-terraform-provider
-    - CURRENT_COMMIT=$(git rev-parse HEAD)
-    - echo "$CURRENT_COMMIT"
-    - echo "Comparing commit hashes"
-    - echo "GitHub commit hash"
-    - echo "$LATEST_COMMIT"
-    - echo "GitLab commit hash"
-    - echo "$CURRENT_COMMIT"
-    - echo "Checking if GitHub got our new code"
-    - if [ "$LATEST_COMMIT" != "$CURRENT_COMMIT" ]
-    - then
-    -   echo "ERROR GitHub did not get our new code Pipeline should fail"
-    -   exit 1
-    - fi
-    - echo "GitHub commit validation passed - GitHub got our new code"
     - echo "Checking if GitHub Actions workflow started"
+    - AUTH_HEADER="Authorization token ${GITHUB_TOKEN}"
     - curl -s -H "$AUTH_HEADER" "https://api.github.com/repos/nrp-nautilus/terraform-provider-kubevirt/actions/runs?per_page=1" > workflow_response.json
     - WORKFLOW_RUNS=$(jq '.workflow_runs | length' workflow_response.json)
-    - echo "Workflow runs found"
-    - echo "$WORKFLOW_RUNS"
-    - if [ "$WORKFLOW_RUNS" -eq 0 ]
-    - then
+    - echo "Workflow runs found: $WORKFLOW_RUNS"
+    - if [ "$WORKFLOW_RUNS" -eq 0 ]; then
     -   echo "ERROR No GitHub Actions runs found Pipeline should fail"
     -   exit 1
     - fi
